log/build_2025-02-03_23-22-03/torto_ctrl/stderr.log
  File "/home/sirapob/torto_ws/install/torto_ctrl/lib/python3.12/site-packages/torto_ctrl/inverse__kinematic.py", line 22
    if leg = FR:
       ^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

Sorry: IndentationError: expected an indented block after 'if' statement on line 23 (inverse_kinematic.py, line 25)
